/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.4/samples
 */


plugins {
    id("java-library")
    id("com.gradleup.shadow") version "9.3.0"
}

group = "engineer.skyouo.plugins.naturerevive.spigot"
version = project.rootProject.version

repositories {
    maven("https://repo.papermc.io/repository/maven-public/")
    maven("https://hub.spigotmc.org/nexus/content/repositories/snapshots/")
    maven("https://oss.sonatype.org/content/repositories/snapshots")
    maven("https://oss.sonatype.org/content/repositories/central")
    maven("https://maven.playpro.com")
    //maven("https://repo.glaremasters.me/repository/bloodshot")
    maven("https://jitpack.io")
    mavenCentral()
}

dependencies {
    implementation("com.github.Carleslc.Simple-YAML:Simple-Yaml:1.8.4")
    compileOnly("io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT")


    compileOnly("com.zaxxer:HikariCP:4.0.3")

    compileOnly("it.unimi.dsi:fastutil:8.5.9")

    compileOnly("net.coreprotect:coreprotect:21.0")
    compileOnly("com.github.TechFortress:GriefPrevention:16.18")
    compileOnly(files("libs/GriefDefenderAPI-2.1.0-SNAPSHOT.jar")) //compileOnly("com.griefdefender:api:2.1.0-SNAPSHOT")
    compileOnly(files("libs/Residence5.1.5.0.jar"))
    compileOnly(files("libs/ChunkClaimPlugin-0.7.0.jar"))

    implementation(project(":naturerevive-common"))

    testImplementation("io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT")

    // FAWE

    implementation(platform("com.intellectualsites.bom:bom-newest:1.45")) // Ref: https://github.com/IntellectualSites/bom
    compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Core")
    compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Bukkit") { isTransitive = false }
}

val selfCheck by tasks.registering(JavaExec::class) {
    group = "verification"
    description = "Runs the ExpiryIndex self-check (assert based, no framework)."
    mainClass.set("engineer.skyouo.plugins.naturerevive.spigot.managers.ExpiryIndexSelfCheck")
    classpath = sourceSets["test"].runtimeClasspath
    jvmArgs("-ea")
}

val configSelfCheck by tasks.registering(JavaExec::class) {
    group = "verification"
    description = "Runs the config v19 -> v20 migration self-check (assert based, no framework)."
    mainClass.set("engineer.skyouo.plugins.naturerevive.spigot.config.ConfigMigrationSelfCheck")
    classpath = sourceSets["test"].runtimeClasspath
    jvmArgs("-ea")
}

tasks {
    named<Test>("test") {
        enabled = false
    }

    check {
        dependsOn(selfCheck)
        dependsOn(configSelfCheck)
    }

    val copyReleaseJar by registering(Copy::class) {
        dependsOn(shadowJar)
        from(shadowJar.flatMap { it.archiveFile })
        into(layout.buildDirectory.dir("libs"))
        rename { "NatureRevive-${project.version}.jar" }
    }

    assemble {
        dependsOn(processResources)
        dependsOn(shadowJar)
        dependsOn(copyReleaseJar)
    }

    shadowJar {
        archiveClassifier.set("shaded")
        manifest {
            attributes["paperweight-mappings-namespace"] = "mojang"
        }

        dependsOn(project.project(":naturerevive-spigot:nms").subprojects.map { it.tasks.named("assemble") })
        from(project(":naturerevive-spigot:nms").subprojects.map {
            zipTree(it.buildDir.resolve("libs/" + it.name + "-" + it.version + ".jar")).matching {
                exclude("META-INF")
            }
        })
    }

    java {
        toolchain.languageVersion.set(JavaLanguageVersion.of(21))
    }

    compileJava {
        options.encoding = Charsets.UTF_8.name()
        options.release.set(21)
    }

    javadoc {
        options.encoding = Charsets.UTF_8.name()
    }

    processResources {
        filteringCharset = Charsets.UTF_8.name()
        filesMatching("plugin.yml") {
            expand(project.properties)
        }
    }
}